Giving up on iOS background-size: cover issue for now.

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,9 @@
 #home {
 	padding: 50px 0;
 	background-color: #555555;
+	background-image: url('../img/backgrounds/photo.jpg');
 	background-repeat: no-repeat;
+	background-position: 25% 0;
 	background-attachment: fixed;
 	background-size: cover;
 }
@@ -135,8 +137,7 @@
 	padding: 25px 0;
 	color: #ffffff;
 	font-size: 24px;
-	font-family: "Times New Roman", serif;
-	/*font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;*/
+	font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
 	font-style: italic;
 }
 
@@ -157,7 +158,6 @@
 	background-repeat: repeat-y;
 	background-position: 0 0;
 	background-attachment: fixed;
-	background-size: cover;
 }
 
 #why-header {
@@ -188,7 +188,7 @@
 }
 
 #why-text {
-	margin-top: 75px;
+	margin-top: 25px;
 	font-family: 'Locator-Light';
 }
 
@@ -318,7 +318,6 @@
 	background-repeat: repeat-y;
 	background-position: 0 0;
 	background-attachment: fixed;
-	background-size: cover;
 }
 
 #purchase-header {
